--- a/stylesheets/sample.css
+++ b/stylesheets/sample.css
@@ -84,6 +84,31 @@ table.sample-c tbody td.hlcol {
 table.sample-c tbody td.hlrow.hlcol { background-color: #5ecfd9; }
 table.sample-c tbody th.hlrow, table.sample-c thead th.hlcol { background-color: #99a394; }
 
+table#sample-3 td { cursor: pointer; }
+table#sample-3 td.hit:before {
+  content: ' ';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(26, 216, 221, 1);
+  /* for Chrome */
+  -webkit-transition-property: none;
+  -moz-transition-property: none;
+  -o-transition-property: none;
+  transition-property: none;
+}
+table#sample-3 td.hit.res:before {
+  -webkit-transition-property: background-color;
+  -moz-transition-property: background-color;
+  -o-transition-property: background-color;
+  transition-property: background-color;
+  -webkit-transition-duration: 2s;
+  -moz-transition-duration: 2s;
+  -o-transition-duration: 2s;
+  transition-duration: 2s;
+  background-color: rgba(26, 216, 221, 0);
+}
+
 table#sample-5 {
   margin: 0;
 }
@@ -133,6 +158,14 @@ table#sample-8 {
 }
 .col-r table {
   margin-left: auto;
+}
+
+.caption.for-r { text-align: right; }
+.caption.for-r span {
+  display: inline-block;
+  margin-right: 10px;
+  padding: 1px 3px;
+  background-color: #ccc;
 }
 
 .clearfix { *zoom: 1; }
